lxc: use SIGCONT to halt void containers.

--- a/srcpkgs/lxc/files/void.common.conf
+++ b/srcpkgs/lxc/files/void.common.conf
@@ -1,6 +1,8 @@
 # Default pivot location
 #lxc.pivotdir = lxc_putold
 
+lxc.haltsignal = SIGCONT
+
 # Default mount entries
 lxc.mount.entry = run run tmpfs rw,nosuid,nodev,mode=755 0 0
 lxc.mount.entry = proc proc proc nodev,noexec,nosuid 0 0
