oracle-jre: move jre to /usr/lib/jvm/jre$version; update to 8u22

--- a/srcpkgs/oracle-jre/files/oracle-jre.sh.in
+++ b/srcpkgs/oracle-jre/files/oracle-jre.sh.in
@@ -1,2 +1,2 @@
-export JAVA_HOME=${JAVA_HOME=/usr/share/java/oracle-jre}
-export PATH="$PATH:/usr/share/java/oracle-jre/bin"
+export JAVA_HOME=${JAVA_HOME=/usr/lib/jvm/jre%LONG_VERSION%}
+export PATH="$PATH:/usr/lib/jvm/jre%LONG_VERSION%/bin"
