--- a/srcpkgs/oracle-jdk/files/oracle-jdk.sh.in
+++ b/srcpkgs/oracle-jdk/files/oracle-jdk.sh.in
@@ -1,2 +1,2 @@
-export JAVA_HOME=${JAVA_HOME=/usr/share/java/oracle-jdk}
-export PATH="$PATH:/usr/share/java/oracle-jdk/bin"
+export JAVA_HOME=${JAVA_HOME=/usr/jvm/jdk%LONG_VERSION%/oracle-jdk}
+export PATH="$PATH:/usr/lib/jvm/jdk%LONG_VERSION%/bin"
