cubieboard2-kernel: update to upstream git commit 0c7986b (3.4.103).

--- a/srcpkgs/cubieboard2-kernel/files/config
+++ b/srcpkgs/cubieboard2-kernel/files/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.79 Kernel Configuration
+# Linux/arm 3.4.103 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -522,8 +522,7 @@ CONFIG_NEON=y
 CONFIG_BINFMT_ELF=y
 CONFIG_ARCH_BINFMT_ELF_RANDOMIZE_PIE=y
 CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS=y
-CONFIG_HAVE_AOUT=y
-CONFIG_BINFMT_AOUT=y
+# CONFIG_HAVE_AOUT is not set
 CONFIG_BINFMT_MISC=y
 
 #
@@ -1294,6 +1293,7 @@ CONFIG_MD_RAID456=m
 # CONFIG_MULTICORE_RAID456 is not set
 CONFIG_MD_MULTIPATH=m
 CONFIG_MD_FAULTY=m
+CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=m
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_BUFIO=m
@@ -1829,6 +1829,7 @@ CONFIG_AW_AXP=y
 CONFIG_AW_AXP20=y
 CONFIG_AXP_CHARGEINIT=y
 CONFIG_AXP_CHGCHANGE=y
+CONFIG_AXP_HWMON=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 CONFIG_AXP152=y
 # CONFIG_PDA_POWER is not set
