xbps-src: full switch to void-packages.

--- a/etc/defaults.conf
+++ b/etc/defaults.conf
@@ -15,7 +15,7 @@
 #
 # [REQUIRED]
 # Master directory. This is where the packages are built and installed.
-# By default set to xbps-packages/masterdir.
+# By default set to void-packages/masterdir.
 #
 #XBPS_MASTERDIR=${HOME}/masterdir
 
