xbps-src: move ccache/distcc to hostdir, to make them shared by multiple masterdirs.
This way a single ccache or distcc directory can be shared by multiple
independent masterdirs.

--- a/etc/defaults.conf
+++ b/etc/defaults.conf
@@ -40,12 +40,14 @@ XBPS_LDFLAGS="-Wl,--as-needed"
 XBPS_SUCMD="sudo /bin/sh -c"
 
 # [OPTIONAL]
-# Enable or disable ccache when building packages.
+# Enable or disable ccache when building packages. The ccache directory
+# is stored in the hostdir, i.e hostdir/ccache.
 #
 #XBPS_CCACHE=yes
 
 # [OPTIONAL]
-# Enable or disable distcc when building packages.
+# Enable or disable distcc when building packages. The distcc directory
+# is stored in the hostdir, i.e hostdir/distcc.
 #
 #XBPS_DISTCC=yes
 #XBPS_DISTCC_HOSTS=""
