oracle-jdk-arm: fix JAVA_HOME

--- a/srcpkgs/oracle-jdk-arm/files/oracle-jdk.sh.in
+++ b/srcpkgs/oracle-jdk-arm/files/oracle-jdk.sh.in
@@ -1,2 +1,2 @@
-export JAVA_HOME=${JAVA_HOME=/usr/jvm/jdk%LONG_VERSION%/oracle-jdk}
+export JAVA_HOME=${JAVA_HOME=/usr/lib/jvm/jdk%LONG_VERSION%}
 export PATH="$PATH:/usr/lib/jvm/jdk%LONG_VERSION%/bin"
