--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: bash
 
+git: depth: 200
+
 env:
     global:
         - PATH=$PATH:$PWD/xtools
@@ -8,7 +10,9 @@ before_script:
     - git clone git://github.com/chneukirchen/xtools.git xtools
 
 script:
-    - git diff --name-status "$TRAVIS_COMMIT_RANGE" > __changed_files
+    - echo Checking: $TRAVIS_COMMIT_RANGE
+    - git diff --name-status -- "$TRAVIS_COMMIT_RANGE" > __changed_files
+    - cat __changed_files
     - grep "^[AM].*srcpkgs/[^/]*/template$" __changed_files | awk '{print $2}' | tee __changed_templates
     - xlint `cat __changed_templates`
 
