--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
     - git clone git://github.com/chneukirchen/xtools.git xtools
 
 script:
-    - echo "Checking: $TRAVIS_COMMIT_RANGE"
+    - echo "Checking $TRAVIS_COMMIT_RANGE"
     - git diff --name-status -- "$TRAVIS_COMMIT_RANGE" > __changed_files
     - cat __changed_files
     - grep "^[AM].*srcpkgs/[^/]*/template$" __changed_files | awk '{print $2}' | tee __changed_templates
