--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 
 script:
     - echo "Checking $TRAVIS_COMMIT_RANGE"
-    - git diff --name-status -- "$TRAVIS_COMMIT_RANGE" > __changed_files
+    - git diff --name-status "$TRAVIS_COMMIT_RANGE" > __changed_files
     - cat __changed_files
     - grep "^[AM].*srcpkgs/[^/]*/template$" __changed_files | awk '{print $2}' | tee __changed_templates
     - xlint `cat __changed_templates`
