.travis.yml: clone xtools with --depth 1

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
         - PATH=$PATH:$PWD/xtools
 
 before_script:
-    - git clone git://github.com/chneukirchen/xtools.git xtools
+    - git clone --depth 1 git://github.com/chneukirchen/xtools.git xtools
 
 script:
     - echo "Checking $TRAVIS_COMMIT_RANGE"
