--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ before_script:
     - git clone --depth 1 git://github.com/chneukirchen/xtools.git xtools
 
 script:
-    - git remote add upstream git://github.com/voidlinux/void-packages.git
-    - git fetch --depth 1 upstream master
-    - git diff --name-status upstream/master > __changed_files
+    - git fetch --depth 1 git://github.com/voidlinux/void-packages.git master
+    - git diff --name-status FETCH_HEAD > __changed_files
     - grep "^[AM].*srcpkgs/[^/]*/template$" __changed_files | awk '{print $2}' | tee __changed_templates
     - xlint `cat __changed_templates`
 
