.travis.yml: more simplifications.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ before_script:
 
 script:
     - git fetch --depth 1 git://github.com/voidlinux/void-packages.git master
-    - git diff --name-status FETCH_HEAD > __changed_files
-    - grep "^[AM].*srcpkgs/[^/]*/template$" __changed_files | awk '{print $2}' | tee __changed_templates
+    - git diff --name-status FETCH_HEAD | grep "^[AM].*srcpkgs/[^/]*/template$" | awk '{print $2}' | tee __changed_templates
     - xlint `cat __changed_templates`
 
 notifications:
