--- a/etc/defaults.conf
+++ b/etc/defaults.conf
@@ -21,10 +21,11 @@
 XBPS_INSTALL_ARGS="--repository=http://repo.voidlinux.eu/current"
 
 # [OPTIONAL]
-# Compilation flags for C and C++.
+# Native Compilation flags for C and C++. Note that these settings override
+# the pre-defined for the target architecture in common/build-profiles/arch.sh.
 #
-XBPS_CFLAGS="-O2 -pipe -fstack-protector-strong"
-XBPS_CXXFLAGS="${XBPS_CFLAGS}"
+#XBPS_CFLAGS="-O2 -pipe -fstack-protector-strong"
+#XBPS_CXXFLAGS="${XBPS_CFLAGS}"
 
 # [OPTIONAL]
 # Linker flags passed to the compiler. By default we use --as-needed to
