.travis.yml: shorter version of the one before

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_script:
     - git clone --depth 1 git://github.com/chneukirchen/xtools.git xtools
 
 script:
-    - git remote add __upstream git://github.com/voidlinux/void-packages.git; git fetch --depth 200 __upstream master
-    - git diff --name-status `git merge-base __upstream/master HEAD` | grep "^[AM].*srcpkgs/[^/]*/template$" | awk '{print $2}' | tee __changed_templates
+    - git fetch --depth 1 git://github.com/voidlinux/void-packages.git master
+    - git diff --name-status FETCH_HEAD...HEAD | grep "^[AM].*srcpkgs/[^/]*/template$" | awk '{print $2}' | tee __changed_templates
     - xlint `cat __changed_templates`
 
 notifications:
