libuv: update to 1.0.0.

--- a/srcpkgs/libuv/files/libuv.pc.in
+++ b/srcpkgs/libuv/files/libuv.pc.in
@@ -4,7 +4,7 @@ libdir=${exec_prefix}/lib
 includedir=${prefix}/include
 
 Name: libuv
-Version: 0.10.27
+Version: %VERSION%
 Description: multi-platform support library with a focus on asynchronous I/O.
 
 Libs: -L${libdir} -luv -lrt -lpthread -lnsl -ldl
