qt: install bins to usr/lib/qt/bin and create symlinks in usr/bin.
This in preparation to make qt (4.x) and qt5 cooexist properly via qtchooser.

--- a/srcpkgs/qt/files/designer.desktop
+++ b/srcpkgs/qt/files/designer.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Exec=/usr/bin/designer
+Exec=designer-qt4
 Name=Qt Designer
 GenericName=Interface Designer
 MimeType=application/x-designer
