--- a/srcpkgs/qt/files/linguist.desktop
+++ b/srcpkgs/qt/files/linguist.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Exec=/usr/bin/linguist
+Exec=linguist-qt4
 Name=Qt Linguist
 GenericName=Translation Tool
 MimeType=application/x-linguist
