--- a/srcpkgs/qt/files/qtconfig.desktop
+++ b/srcpkgs/qt/files/qtconfig.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Qt Config 
 Comment=Configure Qt behavior, styles, fonts
-Exec=/usr/bin/qtconfig
+Exec=qtconfig-qt4
 Icon=qtlogo.png
 Terminal=false
 Type=Application
