postgresql: fix shell version of pg_config.sh
[skip ci]

--- a/srcpkgs/postgresql/files/pg_config.sh.in
+++ b/srcpkgs/postgresql/files/pg_config.sh.in
@@ -1,6 +1,10 @@
 #!/bin/sh
 # Released to Public Domain by Doan Tran Cong Danh
 
+print() {
+	printf '%s\n' "$@"
+}
+
 sysroot="$(cd "${0%/*}" && cd ../.. && pwd)"
 
 BINDIR="$sysroot/usr/bin"
@@ -29,9 +33,9 @@ LIBS="@LIBS@"
 VERSION="PostgreSQL @VERSION@"
 
 if [ "$sysroot" != "/" ]; then
-	CPPFLAGS="$(echo "$CPPFLAGS" | sed "s,-I *\\(/usr/include\\),-I$sysroot\\1,g")"
-	CFLAGS="$(echo "$CFLAGS" | sed "s,-I *\\(/usr/include\\),-I$sysroot\\1,g")"
-	LDFLAGS="$(echo "$LDFLAGS" | sed "s,-L *\\(/usr/lib\\),-L$sysroot\\1,g")"
+	CPPFLAGS="$(print "$CPPFLAGS" | sed "s,-I *\\(/usr/include\\),-I$sysroot\\1,g")"
+	CFLAGS="$(print "$CFLAGS" | sed "s,-I *\\(/usr/include\\),-I$sysroot\\1,g")"
+	LDFLAGS="$(print "$LDFLAGS" | sed "s,-L *\\(/usr/lib\\),-L$sysroot\\1,g")"
 fi
 
 usage() {
@@ -112,28 +116,28 @@ done
 for arg
 do
 	case "$arg" in
-	--bindir) echo "$BINDIR" ;;
-	--docdir) echo "$DOCDIR" ;;
-	--htmldir) echo "$HTMLDIR" ;;
-	--includedir) echo "$INCLUDEDIR" ;;
-	--pkgincludedir) echo "$PKGINCLUDEDIR" ;;
-	--includedir-server) echo "$INCLUDEDIR_SERVER" ;;
-	--libdir) echo "$LIBDIR" ;;
-	--pkglibdir) echo "$PKGLIBDIR" ;;
-	--localedir) echo "$LOCALEDIR" ;;
-	--mandir) echo "$MANDIR" ;;
-	--sharedir) echo "$SHAREDIR" ;;
-	--sysconfdir) echo "$SYSCONFDIR" ;;
-	--pgxs) echo "$PGXS" ;;
-	--configure) echo "$CONFIGURE" ;;
-	--cc) echo "$CC" ;;
-	--cppflags) echo "$CPPFLAGS" ;;
-	--cflags) echo "$CFLAGS" ;;
-	--cflags_sl) echo "$CFLAGS_SL" ;;
-	--ldflags) echo "$LDFLAGS" ;;
-	--ldflags_ex) echo "$LDFLAGS_EX" ;;
-	--ldflags_sl) echo "$LDFLAGS_SL" ;;
-	--libs) echo "$LIBS" ;;
-	--version) echo "$VERSION" ;;
+	--bindir) print "$BINDIR" ;;
+	--docdir) print "$DOCDIR" ;;
+	--htmldir) print "$HTMLDIR" ;;
+	--includedir) print "$INCLUDEDIR" ;;
+	--pkgincludedir) print "$PKGINCLUDEDIR" ;;
+	--includedir-server) print "$INCLUDEDIR_SERVER" ;;
+	--libdir) print "$LIBDIR" ;;
+	--pkglibdir) print "$PKGLIBDIR" ;;
+	--localedir) print "$LOCALEDIR" ;;
+	--mandir) print "$MANDIR" ;;
+	--sharedir) print "$SHAREDIR" ;;
+	--sysconfdir) print "$SYSCONFDIR" ;;
+	--pgxs) print "$PGXS" ;;
+	--configure) print "$CONFIGURE" ;;
+	--cc) print "$CC" ;;
+	--cppflags) print "$CPPFLAGS" ;;
+	--cflags) print "$CFLAGS" ;;
+	--cflags_sl) print "$CFLAGS_SL" ;;
+	--ldflags) print "$LDFLAGS" ;;
+	--ldflags_ex) print "$LDFLAGS_EX" ;;
+	--ldflags_sl) print "$LDFLAGS_SL" ;;
+	--libs) print "$LIBS" ;;
+	--version) print "$VERSION" ;;
 	esac
 done
